siteCollector: adresse aufgeteilt und bindings großteils angepasst

--- a/onYOURway/App/_styles/themes/_shared.less
+++ b/onYOURway/App/_styles/themes/_shared.less
@@ -77,16 +77,19 @@
 	width: 16.6% !important;
 }
 .input-group-c3 {
-	width: 33% !important;
+	width: 25% !important;
 }
 .input-group-c4 {
-	width: 50% !important;
+	width: 33% !important;
 }
 .input-group-c6 {
 	width: 50% !important;
 }
-.input-group-c9 {
+.input-group-c8 {
 	width: 67% !important;
+}
+.input-group-c9 {
+	width: 75% !important;
 }
 .input-group-c10 {
 	width: 83.3% !important;
