--- a/onYOURway/App/_styles/themes/onYOURway2/_onYOURway.css
+++ b/onYOURway/App/_styles/themes/onYOURway2/_onYOURway.css
@@ -216,6 +216,9 @@ ol {
   border-bottom: 3px solid #fba21c;
   margin-bottom: 10px;
 }
+.icon-highlight {
+  color: #333333;
+}
 /*#endregion theme */
 /*#region layout */
 /*body.slide-active {
