--- a/onYOURway/App/views/my/siteCollector.html
+++ b/onYOURway/App/views/my/siteCollector.html
@@ -158,7 +158,7 @@
 		</div>
 
 		<div class="row panel-body">
-			<button class="ok btn btn-success btn-large pull-right"><i class="fa fa-check"></i> <span class="translate">submit</span> </button>
+			<button class="ok btn btn-success btn-large pull-right" data-bind="click: submit"><i class="fa fa-check"></i> <span class="translate">submit</span> </button>
 			<button class="ok btn btn-default btn-large pull-right"><i class="fa fa-remove"></i> <span class="translate">abbrechen</span> </button>
 		</div>
 	</form>
