continuing design - add tag selection

--- a/onYOURway/App/_styles/themes/_shared.less
+++ b/onYOURway/App/_styles/themes/_shared.less
@@ -98,5 +98,217 @@
 	width: 100% !important;
 }
 
-
 /*#endregion bootstrap form tweaks*/
+
+/*#region general classes from todo theme */
+
+.m-n {
+	margin: 0;
+}
+
+.m-l {
+	margin-left: 15px;
+}
+
+.m-l-none {
+	margin-left: 0;
+}
+
+.m-l-xs {
+	margin-left: 5px;
+}
+
+.m-l-sm {
+	margin-left: 10px;
+}
+
+.m-l-lg {
+	margin-left: 20px;
+}
+
+.m-l-n {
+	margin-left: -15px;
+}
+
+.m-l-n-xxs {
+	margin-left: -1px;
+}
+
+.m-l-n-xs {
+	margin-left: -5px;
+}
+
+.m-l-n-sm {
+	margin-left: -10px;
+}
+
+.m-l-n-lg {
+	margin-left: -20px;
+}
+
+.m-t {
+	margin-top: 15px;
+}
+
+.m-t-none {
+	margin-top: 0;
+}
+
+.m-t-xxs {
+	margin-top: 1px;
+}
+
+.m-t-xs {
+	margin-top: 5px;
+}
+
+.m-t-sm {
+	margin-top: 10px;
+}
+
+.m-t-lg {
+	margin-top: 20px;
+}
+
+.m-t-n {
+	margin-top: -15px !important;
+}
+
+.m-t-n-xxs {
+	margin-top: -1px;
+}
+
+.m-t-n-xs {
+	margin-top: -5px;
+}
+
+.m-t-n-sm {
+	margin-top: -10px;
+}
+
+.m-t-n-lg {
+	margin-top: -20px;
+}
+
+.m-r {
+	margin-right: 15px;
+}
+
+.m-r-none {
+	margin-right: 0;
+}
+
+.m-r-xs {
+	margin-right: 5px;
+}
+
+.m-r-sm {
+	margin-right: 10px;
+}
+
+.m-r-lg {
+	margin-right: 20px;
+}
+
+.m-r-n {
+	margin-right: -15px;
+}
+
+.m-r-n-xxs {
+	margin-right: -1px;
+}
+
+.m-r-n-xs {
+	margin-right: -5px;
+}
+
+.m-r-n-sm {
+	margin-right: -10px;
+}
+
+.m-r-n-lg {
+	margin-right: -20px;
+}
+
+.m-b {
+	margin-bottom: 15px;
+}
+
+.m-b-none {
+	margin-bottom: 0;
+}
+
+.m-b-xs {
+	margin-bottom: 5px;
+}
+
+.m-b-sm {
+	margin-bottom: 10px;
+}
+
+.m-b-lg {
+	margin-bottom: 20px;
+}
+
+.m-b-n {
+	margin-bottom: -15px;
+}
+
+.m-b-n-xxs {
+	margin-bottom: -1px;
+}
+
+.m-b-n-xs {
+	margin-bottom: -5px;
+}
+
+.m-b-n-sm {
+	margin-bottom: -10px;
+}
+
+.m-b-n-lg {
+	margin-bottom: -20px;
+}
+
+.media-xs {
+	min-width: 50px;
+}
+
+.media-sm {
+	min-width: 80px;
+}
+
+.media-md {
+	min-width: 90px;
+}
+
+.media-lg {
+	min-width: 120px;
+}
+
+.thumb {
+	width: 64px;
+	display: inline-block;
+}
+
+.thumb-lg {
+	width: 90px;
+	display: inline-block;
+}
+
+.thumb-xs {
+	width: 18px;
+	display: inline-block;
+}
+
+.thumb-sm {
+	width: 36px;
+	display: inline-block;
+}
+
+	.thumb img, .thumb-xs img, .thumb-sm img, .thumb-lg img {
+		height: auto;
+		max-width: 100%;
+		vertical-align: middle;
+	}
+/*#endregion from todo theme */
