fix: reenabled siteCollector after refactoring themes

--- a/onYOURway/App/themes/vonMorgen/css/vonMorgen.css
+++ b/onYOURway/App/themes/vonMorgen/css/vonMorgen.css
@@ -1,5 +1,13 @@
 ﻿/*colors*/
 /***************************/
+/* onyYOURway overrides      */
+#mySiteCollector {
+  bottom: 0px;
+  top: 30%;
+  height: 70%;
+  width: 100%;
+}
+/***************************/
 /* Boostrap overrides      */
 /*#region jQueryUI slider*/
 .ui-slider {
