--- a/onYOURway/App/themes/vonMorgen/css/vonMorgen.less
+++ b/onYOURway/App/themes/vonMorgen/css/vonMorgen.less
@@ -5,6 +5,15 @@
 @accent4: #B3D236;
 @selectedItem: #647a85;
 
+/***************************/
+/* onyYOURway overrides      */
+
+#mySiteCollector {
+	bottom: 0px;
+	top: 30%;
+	height: 70%;
+	width: 100%;
+}
 
 /***************************/
 /* Boostrap overrides      */
